# Meshdecoder

./: .gitignore  CMakeLists.txt  README.md  collector.py  main.c  main.py  raw_capture.txt  requirements.txt  sercom.py  test  test_pipeline.py  tests.py  transporter.py
dissector/: CMakeLists.txt  meshtastic.c
example_caps/: diff_channel.pcapng  direct_message.pcapng  encrypted_mesh.pcapng  encrypted_with_default_psk.pcapng  structured_test.pcapng
modules/: decoder.py  fifo.py  pcap.py  simplecom.py  utils.py
scripts/: decoder.py  zmqdecoder.py
scripts/modules/: fifo.py  pcap.py
