# CMakeLists.txt
#
# SPDX-FileCopyrightText: © 2024-2025 Kevin Leon
# SPDX-FileCopyrightText: © 2024-2025 Antonio Vázquez Blanco <antoniovazquezblanco@gmail.com>
# SPDX-License-Identifier: GPL-2.0-or-later

cmake_minimum_required(VERSION 3.10)

project(MeshdecoderPlugins)

add_subdirectory(dissector)
